--- a/htdocs/abc.html
+++ b/htdocs/abc.html
@@ -1,3 +1,14 @@
 <h1>tabindex ac canvas</h1>
 
 <img src="test.png">
+
+
+<form target="_blank" action="/api" method="POST" >
+
+    <input type="radio" name="option" value="opt-1" checked> Check Option 1<br>
+    <input type="radio" name="option" value="opt-1"> Check Option 2<br>
+    <input type="radio" name="option" value="opt-1"> Check Option 3<br>
+
+    <textarea name="Text1" cols="40" rows="5">some text here and there</textarea>
+    <input type="submit" name="submit" value="send">
+</form>
