add: javascript for auto-update-demo

--- a/htdocs/abc.html
+++ b/htdocs/abc.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Python Webserver</title>
+
+     <script src="./js/periodic.js"></script>
 </head>
 <body>
 
@@ -49,6 +51,9 @@
     </script>
 </p>
 
+<h1>Javascript auto update</h1>
 
+<div id="auto-update-box">nothing here yet</div>
+    <button onclick="startUpdate()">start auto updates</button>
 </body>
 </html>
